public enum GameState
{
    PythonPreparation,
    ProfileSelection,
    EARCalibration,
    EmotionCalibration,
    EmotionTest,
    ProfileSave,
    Gameplay,
    Pause,
    MainMenu,
    GameOver
}